--- a/app_client/index.html
+++ b/app_client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html ng-app="meanApp">
+<html ng-app="sangRoyaleApp">
 <head>
-  <title>MEAN stack authentication example</title>
+  <title>Sang Royale website</title>
   <base href="/">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css">
