--- a/app_client/index.html
+++ b/app_client/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-  <!-- <link rel="stylesheet" href="/lib/bootstrap/css/sangroyale-theme.min.css"> -->
+  <link rel="stylesheet" href="stylesheets/sr-about.css" type="text/css">
 </head>
 <body ng-view>
   <script src="lib/angular/angular.min.js"></script>
