--- a/app_client/common/directives/navigation/navigation.template.html
+++ b/app_client/common/directives/navigation/navigation.template.html
@@ -87,10 +87,10 @@ input[readonly]{
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown">Sang Royale<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="about#clan">Qui sommes nous?</a></li>
-            <li><a href="about#activities">Nos activités</a></li>
+            <li><a href="about">Qui sommes nous?</a></li>
+            <li><a href="about#sr-topic-activities-title">Nos activités</a></li>
             <li class="divider"></li>
-            <li><a href="about#candidates">Nous rejoindre</a></li>
+            <li><a href="about#sr-topic-candidates-title">Nous rejoindre</a></li>
           </ul>
         </li>
 
