--- a/app_client/about/about.view.html
+++ b/app_client/about/about.view.html
@@ -100,7 +100,7 @@ Nous avons actuellement 27 membres. (3 devraient nous rejoindre)
 		</p>
 		
 		<p>Nous sommes déjà à <strong>{{vm.generalinfo.linkderniertournoi}} tournois d'organisés</strong> ! Nous avons l'intention de les reprendre cet été, et d'éventuellement <span class="important">rajouter des regles fun</span> :D</p>
-		<p><span class="important">Lien dernier challonge</span> : <a href="{{vm.generalinfo.linkderniertournoi}}">Lien vers le dernier tournoi/a></p>
+		<p><span class="important">Lien dernier challonge</span> : <a href="{{vm.generalinfo.linkderniertournoi}}">Lien vers le dernier tournoi</a></p>
 		<br/>
 		<!-- Mettre plutot le lien vers le compte Tournaments SR<!-->
 	</div>
