--- a/app_client/home/home.view.html
+++ b/app_client/home/home.view.html
@@ -2,9 +2,14 @@
 
 <div class="container">
   
-  <h1>Bienvenue</h1>
+  <center><img src="images/banniereCSnoir.png"/></center>
+  <br/>
+  <div class='wrap'>
+  <div class='time-to'>
+  <p>Que le meilleur Prince triomphe</p>
+  <span countdown='' date='September 17, 2017 16:00:00'>&nbsp;</span>
+  </div>
+</div>
 
-  <p>Site encore en cours de développement</p>
-  <p>S'inscrire est pour le moment inutile ;D</p>
 
 </div>
