--- a/app_client/index.html
+++ b/app_client/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/sr-about.css" type="text/css">
-  <link rel='stylesheet' href='/scripts/fullcalendar/dist/fullcalendar.css' />
+  <link rel='stylesheet' href='/scripts/fullcalendar/dist/fullcalendar.css'>
 </head>
 <body ng-view>
 
@@ -18,18 +18,16 @@
 
 
 <!--Bootstrap -->
-  
- <!-- <script src="lib/bootstrap/js/bootstrap.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap-tpls.min.js"></script>
  
- <script src="app.min.js"></script>
+<script src="app.min.js"></script>
 
 <!-- jQuery dependencies -->
-<script type="text/javascript" src='/scripts/jquery/dist/jquery.min.js'></script>-->
+<script type="text/javascript" src='/scripts/jquery/dist/jquery.min.js'></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
- <!-- Full calendar dependencies -->
+<!-- Full calendar dependencies -->
 <script type="text/javascript" src='lib/uicalendar/src/calendar.js'></script>
 <script type="text/javascript" src='/scripts/fullcalendar/dist/fullcalendar.js'></script>
 <script type="text/javascript" src="/scripts/fullcalendar/dist/gcal.js"></script>
