--- a/app_client/crownchest/crownchest.html
+++ b/app_client/crownchest/crownchest.html
@@ -12,6 +12,28 @@
   		</div>
 	</div> 
   	</div>
+  	<div id="best-contributers">
+  		<h1>Les 5 meilleurs contributeurs de toute la famille Sang Royale cette semaine</h1>
+  		<!-- returnTopMembersCrownChests -->
+  		<table class="table table-responsive">
+  		<thead class="thead-light">
+  		<tr>
+  			<th scope="col">Rang</th>
+  			<th scope="col">Pseudo</th>
+  			<th scope="col">Clan</th>
+  			<th scope="col">Nombre de couronnes</th>
+  		</tr>
+  		<tbody>
+  			<tr class="membersClanChestLine" ng-repeat="resultElem in vm.topchest | orderBy : resultElem.clanChestCrowns" ng-class="{'bg-primary': $index === 0, 'bg-success': $index===1, 'bg-warning' : $index === 2}">
+  				
+	  			<th scope="row">{{$index + 1}}</th>
+	  			<td><p>{{resultElem.name}}</p></td>
+	  			<td><p>{{resultElem.clanName}}</p></td>
+	  			<td><p>{{resultElem.clanChestCrowns}}</p></td>
+  			</tr>
+  		</tbody>
+  		</table>
+  	</div>
 
 <!--
 	 
