--- a/app_client/home/home.view.html
+++ b/app_client/home/home.view.html
@@ -2,12 +2,12 @@
 
 <div class="container">
   
-  <center><img src="images/banniereCSnoir.png"/></center>
+  <center><img src="images/royalecup.jpg"/></center>
   <br/>
   <div class='wrap'>
   <div class='time-to'>
-  <p>Que le meilleur Prince triomphe</p>
-  <span countdown='' date='September 17, 2017 16:00:00'>&nbsp;</span>
+  <p>Winter is Coming</p>
+  <span countdown='' date='December 20, 2017 18:00:00'>&nbsp;</span>
   </div>
 </div>
 
